Fix the balloon display in IE7 (but they still ignore z-index :( ).

--- a/splash/balloons/releasetheballoons.css
+++ b/splash/balloons/releasetheballoons.css
@@ -7,6 +7,7 @@
 #releasetheballoons {
   position: absolute;
   top: -74px;
+  left: 0;
   width: 100%;
   text-align: center;
 }
